# never_forget_bot

./: .cursorignore  .env.example  .gitignore  .gitlab-ci.yml  .temporal.env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  log.ini  promt.txt  pyproject.toml  setup.cfg
.github/workflows/: main.yml
bot/: __init__.py  __main__.py  creator.py
bot/bot_helper/: bot.py
bot/bot_helper/send/: __init__.py  db_dump.py  file.py  message.py  ping_status.py
bot/config/: default.py  utils.py
bot/database/: __init__.py
bot/database/connection/: session.py
bot/database/migrator/: env.py
bot/database/migrator/versions/: 2024-12-16_12bea55a5eea_user.py  2024-12-17_cdb60bbf90d4_event.py  2024-12-19_b88b6c6f4ed6_add_timezone.py  2024-12-20_11068c0020f3_add_notification.py  2024-12-20_6163d1441cf5_add_notification.py  2024-12-20_f5ec3563886f_add_notification.py  2024-12-22_b1281769f205_delete_notification_type.py
bot/database/models/: __init__.py  base.py  event.py  notification.py  user.py
bot/handlers/: __init__.py  cancel.py  change_timezone.py  error.py  message.py  notify_processing.py  show_events.py  start.py  upcoming_events.py  upcoming_notifications.py  voice.py
bot/logger_config/: configure.py  intercept_handler.py
bot/logger_config/custom_loki_logger_handler/: loguru_formatter.py  loki_logger_handler.py
bot/markups/: cancel_markup.py  notify_markup.py
bot/middlewares/: __init__.py  check_user.py  unique_id_middleware.py
bot/schemas/event/: event_schemas.py
bot/schemas/event/set_delay_workflow/: set_delay_workflow_schema.py
bot/schemas/notification/: notification_schemas.py
bot/schemas/notify_workflow/: notify_workflow_schemas.py
bot/schemas/process_message_workflow/: process_message_workflow_schemas.py
bot/temporal/: __main__.py  notify_workflow.py  process_message_workflow.py  reminder_workflow.py  send_notify.py  set_delay_workflow.py
bot/text/: text_data.py
bot/utils/common/: __init__.py  datetime_utils.py  yandex_utils.py
bot/utils/event_utils/: __init__.py  database.py  service.py
bot/utils/external_request/: service.py
bot/utils/gpt/: yandex_gpt.py
bot/utils/notification_utils/: __init__.py  database.py
bot/utils/stt/: yandex_stt.py
bot/utils/user/: __init__.py  database.py
bot/utils/user_utils/: __init__.py  database.py  service.py
ci/: deploy-github-copy.sh
temporal/: __main__.py
tests/: conftest.py  utils.py
tests/bot/: conftest.py
tests/bot/bot_helper/send/: test_db_dump.py  test_error_message.py  test_ping_status.py
tests/bot/handlers/: test_upcoming_notifications.py
tests/bot/utils/event_utils/: test_database.py
tests/bot/utils/user/: test_database.py
tests/factory_lib/: __init__.py  event.py  notification.py  user.py
tests/test_migrations/: test_stairway.py
tools/: __main__.py  open_sqlalchemy.py
